fix: overflow in facility
added a new div to contain overflow

--- a/style.css
+++ b/style.css
@@ -127,6 +127,14 @@ main {
     margin-top: 48px;
 }
 
+#facilityOverflow {
+    margin-left: -16px;
+    margin-right: -16px;
+    padding-left: 16px;
+    padding-right: 16px;
+    overflow: hidden;
+}
+
 #facilityCarouselContainer {
     list-style: none;
     padding-left: 0;
@@ -241,7 +249,7 @@ main {
     display: inline-block;
     margin-right: 2px;
     margin-left: 2px;
-    opacity: 50%;
+    opacity: 60%;
 }
 
 @keyframes fadeIn {
